Fix tip overflow

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1080,7 +1080,7 @@ body {
 
 .wordtree-feedback {
     display: block;
-    font-size: 14px;
+    font-size: 13px;
     left: 0;
     margin-top: 4px;
     padding: 6px;
